# rust-todo

./: .gitignore  Cargo.toml  README.md  TUI_GUIDE.md  WARP.md
docs/: implementation-status.md
src/: cli.rs  handlers.rs  lib.rs  main.rs  storage.rs  todo.rs
src/tui/: animation.rs  mod.rs  theme.rs
tests/: integration.rs
